# NexusCore

./: .coverage  .coveragerc  .cursorignore  .cursorrules  .dockerignore  .env.bak  .env.template  .gitattributes  .gitignore  .nexus_context.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REPORT_CHANGES.md  COVERAGE_ANALYSIS.md  CURSOR_OUTPUT_IMPROVEMENT.md  CURSOR_WSL_OUTPUT_VERIFICATION.md  DEVELOPMENT.md  Dockerfile.webapp  Makefile  NexusCore.code-workspace  OpenCodeInterpreter.code-workspace  PR_DESCRIPTION_CR_NEXUS_051.md  README.md  README_VENV.md  README_old.md  SECURITY_FIXES_PHASE1.md  WSL_AUTO_EXECUTION_STATUS.md  WSL_OUTPUT_STATUS.md  WSL_OUTPUT_VERIFICATION_FINAL.md  WSL_OUTPUT_VERIFICATION_RESULT.md  _extract_deps.py  activate  activate_venv.sh  api_client_test.py  docker-compose.saas.yml  fkb_local.json  gradio_app.py  launch_all.ps1  main_cli.py  (+30 more)
.claude/: rules.md  settings.json  settings.local.json
.cursor/: auto_activate_venv.sh  config.yaml  setup_bashrc.sh
.github/: release-drafter-config.yml  renovate.json
.nexus/: self_healing.config.json.example
.spec/: CR-NEXUS-011_WebApp_HTML_UI_API_Migration_Integration.md
DECISION_LOGS/: DECISION_LOG.md
GOVERNANCE/: AI_INSTRUCTIONS.md  FAST_GATE_QUICKSTART.md  GATE_MESSAGE_CATALOG.md  HYGIENE_CHECK.md  IMPORT_MAPPING.md  MASTER_PROTOCOL_TEMPLATE.md  README.md  REVIEW_PACKET_TEMPLATE.md  SPEC_TEST_DRIVEN_ITERATION.md
PROJECT_PROFILES/: PROJECT_PROFILE_NEXUSCORE.md  README.md
a/: COMBINED_CODE.py  PROJECT_CHRONICLE.md  PROJECT_INFO.md  PROJECT_INFO.md:Zone.Identifier  README.md
app/: extensions.py
archive/: ai_assistant.py  app.py  legacy_flask_gradio_app.py
codex_bridge/: README.md
codex_history/: 20251115-064305_success_changes.diff  20251115-065745_success_changes.diff  20251115-075047_success_changes.diff  20251115-093430_success_changes.diff  20251115-121409_success_changes.diff  20251115-152559_success_changes.diff  20251118-123918_success_changes.diff  20251120-084646_success_changes.diff  20260104-120319_success_changes.diff  20260104-211346_failure_changes.diff  20260104-230429_failure_changes.diff  20260104-230809_success_changes.diff  20260104-231314_success_changes.diff  20260105-002120_success_changes.diff  20260105-002357_success_changes.diff
config/: constitution.yaml  env_loader.py  policy_rules.json
database/: state_manager.py
dev_tools/: check_test_quality.py  fast_lane_check.py  reorganize_docs.sh  run_test_report.sh  run_test_with_immediate_output.py  run_tests.py  run_tests.sh  (+6 more)
exports/NexusCore_gpt5-zip_20251116_215341/: .coverage  .env.template  .gitignore  MANIFEST_REPORT.md  NexusCore.code-workspace  main_cli.py  pyproject.toml  requirements.dev.lock.txt  requirements.lock.txt
exports/NexusCore_gpt5-zip_20251116_215341/codex_bridge/: codex_diff_capture.py  codex_runlog_sync.py
exports/NexusCore_gpt5-zip_20251116_215341/codex_history/: 20251115-130058_success_changes.diff  20251115-135132_success_changes.diff
exports/NexusCore_gpt5-zip_20251116_215341/data_collection/: README.md
exports/NexusCore_gpt5-zip_20251116_215341/database/: state_manager.py
exports/NexusCore_gpt5-zip_20251116_215341/docs/: codex_instruction_manifest.md
exports/NexusCore_gpt5-zip_20251116_215341/healing_sandbox/app/: main.py
exports/NexusCore_gpt5-zip_20251116_215341/healing_sandbox/src/agents/: debugger_agent.py
exports/NexusCore_gpt5-zip_20251116_215341/history/: history_20250710_151716.json
exports/NexusCore_gpt5-zip_20251116_215341/patch_history/: patch_20250906_213919.json  patch_20250907_004740.json  patch_20250907_004831.json  patch_20250907_111602.json  patch_20250907_111702.json  patch_20250907_162012.json  patch_20250907_162013.json  patch_20250907_165601.json  patch_20250907_165603.json  patch_20250907_172355.json  patch_20250907_181047.json  patch_20250907_181048.json  patch_20250907_192555.json  patch_20250908_120957.json  patch_20250908_125140.json  patch_20250908_125141.json  patch_20250911_234803.json  patch_20990101_000000.json
exports/NexusCore_gpt5-zip_20251116_215341/src/: sitecustomize.py
exports/NexusCore_gpt5-zip_20251116_215341/src/nexuscore/agents/: base_agent.py  requirement_agent.py  tester_agent.py
exports/NexusCore_gpt5-zip_20251116_215341/src/nexuscore/code_interpreter/: gradio_test_runner.py
exports/NexusCore_gpt5-zip_20251116_215341/src/nexuscore/core/: orchestrator.py  orchestrator_legacy.py
exports/NexusCore_gpt5-zip_20251116_215341/src/nexuscore/gradio_app/: auto_revision_runner.py  repair_timeline.py  revision_loop.py  streamlit_migrated_tab.py
exports/NexusCore_gpt5-zip_20251116_215341/src/nexuscore/llm/: llm_router.py
exports/NexusCore_gpt5-zip_20251116_215341/src/nexuscore/npe/: logger.py
exports/NexusCore_gpt5-zip_20251116_215341/src/nexuscore/utils/: __init__.py
exports/NexusCore_gpt5-zip_20251116_215341/src/nexuscore/ventures/: vc_agent.py
exports/NexusCore_gpt5-zip_20251116_215341/src/sandbox_logs/: repair_20250713_121010_original.py  repair_20250713_131857_traceback.txt  repair_20250713_132959_traceback.txt  repair_20250713_142312_traceback.txt  repair_20250713_213538_fixed.py  repair_20250713_213538_traceback.txt
exports/NexusCore_gpt5-zip_20251116_215341/src/sandbox_output/: sample.py  test_sample.py
exports/NexusCore_gpt5-zip_20251116_215341/tests/: test_math_utils.py
exports/NexusCore_gpt5-zip_20251116_215341/tests/agents/: test_guardian_agent.py  test_knowledge_curator_agent_ultimate.py
exports/NexusCore_gpt5-zip_20251116_215341/tests/code_interpreter/: test_base_interpreter.py
exports/NexusCore_gpt5-zip_20251116_215341/tests/core/: test_orchestrator.py  test_orchestrator_mega.py
exports/NexusCore_gpt5-zip_20251116_215341/tests/gradio_app/: test_revision_loop.py
exports/NexusCore_gpt5-zip_20251116_215341/tests/modules/: test_code_generator.py  test_tester.py
exports/NexusCore_gpt5-zip_20251116_215341/tests/utils/: test_code_analyzer.py  test_file_utils_enhanced.py  test_vcs.py
exports/NexusCore_gpt5-zip_20251116_215341/tools/: code_export_for_ai.py  code_export_for_ai_perplexity.py
(+6178 files in other folders)
