# ==============================================================================
# ファイル名: pyproject.toml (nexuscore構造対応・完全修正版)
# メモ: パッケージ構造移行完了版、インストールエラー全解消
#      src/nexuscore/* 構造に完全対応
# ==============================================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexuscore"
version = "0.1.0"
authors = [
    { name="NexusCore Team", email="team@nexuscore.dev" },
]
description = "Self-Evolving AI Multi-Agent System for Enterprise"
# README.mdエラー回避のため一時的にコメントアウト
# readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "multi-agent", "automation", "enterprise", "voice", "audio"]

# 新しいSPDX形式のライセンス（警告解消）
license = { text = "MIT" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    # ライセンス分類子を削除（警告解消）
]

dependencies = [
    "gradio>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "openai-whisper>=20231117",
    "sounddevice>=0.4.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "pydub>=0.25.0",
    "google-generativeai>=0.3.0",
    "anthropic>=0.7.0",
    "GitPython>=3.1.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "patch>=1.16",
    "unidiff>=0.7.0",
    "tree-sitter>=0.20.0",
    "autopep8>=2.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flask>=2.3.0",              # ← 追加
    "flask-cors>=4.0.0",         # ← 追加
    "werkzeug>=2.3.0",           # ← 追加
    "gunicorn>=20.1.0",          # ← プロダクション用
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]
audio = [
    "openai-whisper>=20231117",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "pydub>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/NexusCore"
Documentation = "https://nexuscore.readthedocs.io/"
Repository = "https://github.com/YOUR_USERNAME/NexusCore.git"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/NexusCore/issues"

# --- setuptools設定（nexuscore構造対応版） ---
[tool.setuptools]
package-dir = {"" = "src"}

# 新しいnexuscore構造に対応したパッケージリスト（重要な修正）
packages = [
    "nexuscore",
    "nexuscore.agents", 
    "nexuscore.api",
    "nexuscore.audio",
    "nexuscore.code_interpreter",
    "nexuscore.core",
    "nexuscore.gradio_app",
    "nexuscore.modules",
    "nexuscore.utils",
]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml", "*.json", "*.toml", "*.cfg"]
nexuscore = ["py.typed"]
"nexuscore.audio" = ["*.wav", "*.mp3", "*.flac", "*.m4a"]

# --- 開発ツール設定 ---

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | venv
  | build
  | dist
  | exports
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
minversion = "7.0"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "audio: marks tests as audio processing tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
precision = 2

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "gradio.*",
    "pandas.*",
    "numpy.*",
    "whisper.*",
    "soundfile.*",
    "librosa.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.ruff.isort]
known-first-party = ["nexuscore"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.isort]
profile = "black"
line-length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["nexuscore"]
