[project]
name = "nexuscore"
version = "8.2.0"
description = "Multi-agent AI development framework with multi-tier quality gates"
requires-python = ">=3.12"
license = "Apache-2.0"

[project.scripts]
nexus = "nexuscore.cli.app:main"

[project.entry-points."nexuscore.agents"]
# External agent plugins register here:
# my_agent = "my_package:MyAgent"

[project.entry-points."nexuscore.workflows"]
# External workflow plugins register here:
# my_workflow = "my_package:MyWorkflow"

[tool.black]
include = "\\.pyi?$"
exclude = """
/(
    \\.git
  | \\.venv
  | venv
  | dist
  | build
  | __pycache__
  | .nexus
  | chroma_db
  | vector_store
  | models
  | data
  | logs
  | tmp
  | src/sandbox_logs
)/
"""
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  ".git",
  ".venv",
  "venv",
  "dist",
  "build",
  "__pycache__",
  ".nexus",
  "chroma_db",
  "vector_store",
  "models",
  "data",
  "logs",
  "tmp",
  "src/sandbox_logs",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "B",  # bugbear
  "UP", # pyupgrade
]
ignore = [
  "E501",  # 行長は Black に任せる
  "UP040", # Python 3.12+ type文構文 (Python 3.11 非対応)
  "UP047", # Python 3.12+ 型パラメータ構文 (Python 3.11 非対応)
  "B008",  # FastAPI Depends() のデフォルト引数パターン (フレームワーク仕様)
  "E402",  # モジュールレベルimport順序 - sys.path設定後の意図的なimport
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.mutmut]
paths_to_mutate = ["src/nexuscore/agents/mutation_tester_agent.py"]
tests_dir = ["tests/agents/test_mutation_tester_agent.py", "-m", "not slow"]

# ============================================================================
# Bandit セキュリティスキャン設定
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/api/archive"]

# ============================================================================
# Bandit セキュリティスキャン設定
# ============================================================================
[tool.bandit]
# スキャン対象から除外するパス
exclude_dirs = [
  "tests/",
  ".venv/",
  "venv/",
  "build/",
  "dist/",
  ".nexus/",
  "chroma_db/",
  "vector_store/",
  "models/",
  "data/",
  "logs/",
  "tmp/",
  "src/sandbox_logs/",  # 修復ログ（72ファイル・AST parse失敗の原因・本来 src/ 配下ではない）
]

# スキップするテスト（必要に応じて調整）
# B101: assert_used - テストコード以外でのassert使用
# B601: paramiko_calls - パラメトライズされたシェル呼び出し
# 除外するテスト（明示的に無視）
# B404: import subprocess - subprocess自体のインポートは問題なし
# B603: subprocess_without_shell_equals_true - shell=Falseの場合は安全
skips = ["B101", "B404", "B603"]  # Phase 1〜: B101/B404/B603 をスキップ(B101=assert、B404=subprocess import、B603=subprocess call)
