# ============================
# NexusCore: pyproject.toml
# 標準: PEP 621 準拠 / 依存は本ファイルに一本化
# 運用: requirements(lock) は自動生成物として管理
# Python: 3.11 系を公式サポート（<3.13）
# ============================

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexuscore"
version = "0.1.0"
description = "Autonomous OS for AI-driven software development and governance (NexusOS/NexusCore)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }

authors = [
  { name = "NexusCore Team" }
]

keywords = ["ai", "multi-agent", "automation", "governance", "developer-tools"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

# --- 基本依存（本番運用に必要な最小セット） ---
# 役割:
#  - LLM クライアント: openai / anthropic / google-generativeai
#  - コアユーティリティ: Git, HTTP, .env, YAML, 差分, 色付け
#  - 数値/データ: numpy / pandas / scipy / scikit-learn
#  - 解析: tree-sitter
#  - Web: Flask 系（UI は extras:ui に分離）
dependencies = [
  "openai>=1.0.0",
  "anthropic>=0.7.0",
  "google-generativeai>=0.3.0",

  "GitPython>=3.1.0",
  "requests>=2.28.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
  "unidiff>=0.7.0",
  "patch>=1.16",
  "termcolor>=2.4.0",

  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "scipy>=1.10.0",

  "tree-sitter>=0.20.0",

  "flask>=2.3.0",
  "flask-cors>=4.0.0",
  "gunicorn>=20.1.0",
  "werkzeug>=2.3.0"
]

# --- オプション依存（extras） ---
[project.optional-dependencies]
# 開発（整形/静的解析/テスト）
dev = [
  "black>=24.0",
  "isort>=5.0",
  "mypy>=1.0",
  "ruff>=0.1.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0"
]

# テスト拡張（任意で anyio 等）
test = [
  "pytest-anyio"
]

# データベース (PostgreSQL + Redis)
database = [
  "sqlalchemy>=2.0",
  "psycopg2-binary",
  "redis>=5.0"
]

# UI (Gradio)
ui = [
  "gradio>=4.0"
]

# ドキュメント
docs = [
  "sphinx>=5.0.0",
  "myst-parser>=0.18.0",
  "sphinx-rtd-theme>=1.0.0"
]

# 音声処理（重量系は分離）
audio = [
  "librosa>=0.10.0",
  "openai-whisper>=20231117",
  "pydub>=0.25.0",
  "soundfile>=0.12.0",
  "sounddevice>=0.4.0"
  # 注: Python 3.13+ の互換は将来サポート時に environment marker で追加
  # 例: "standard-aifc; python_version >= '3.13'"
]

# Web/API（FastAPI 系は分離）
webapi = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.22.0",
  "websockets>=11.0"
]

# Jupyter 実行
jupyter = [
  "jupyter_client>=8.0.0",
  "ipykernel>=6.0.0"
]

# 翻訳
translate = [
  "google-cloud-translate>=2.0.0"
]

# 追加 LLM/前処理（重いバックエンドは選択式）
llm-extra = [
  "transformers>=4.40.0"
  # "torch"        # CUDA/ROCm/CPU は環境別 wheel のため任意導入を推奨
  # "tensorflow"   # 同上（必要時のみ）
]

# --- 配布設定（src 配下をパッケージ化） ---
[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "docs", "examples", "scripts", "notebooks", "exports", "build", "dist", ".venv", "venv"]

# --- 開発ツール設定 ---
[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B","C4","RUF"]
ignore = ["E501"]  # line too long は Black に委譲

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--verbose",
  "--tb=short",
  "--cov=src",
  "--cov-report=term-missing",
]
minversion = "7.0"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
precision = 2
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
